<resources>
    <string name="app_name">OrderFood</string>

    <string name="tv_sign_in">Sign In</string>
    <string name="et_hint_account_name">Account name</string>
    <string name="et_hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tab_manage_employee">Manage Employee</string>
    <string name="tab_manage_food">Manage Food</string>

    <string name="tv_label_address">Address:</string>
    <string name="tv_label_phone_number">Phone:</string>
    <string name="btn_profile_save">Save</string>
    <string name="btn_profile_cancel">Cancel</string>
    <string name="tv_label_role">Role:</string>
    <string name="menu_profile">Profile</string>
    <string name="tv_table_no">No</string>
    <string name="tv_table_name">Table name</string>
    <string name="btn_add_food">Add food</string>
    <string name="btn_checkout">Checkout</string>
    <string name="tv_table_detail_cus_id_base">ID:</string>
    <string name="tv_food_name">Name</string>
    <string name="tv_food_order_quantity">Q.</string>
    <string name="tv_food_order_price">Price</string>
    <string name="tv_new_employee">New Employee</string>
    <string name="et_name">Name:</string>
    <string name="btn_add_new_employee">Add New Employee</string>
    <string name="tv_new_food">New Food</string>
    <string name="tv_add_food_price">Price:</string>
    <string name="tv_add_food_description">Description:</string>
    <string name="btn_add_new_food">Add New Food</string>
    <string name="btn_edit_food_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_edit_food_sample_quantity">40</string>
    <string name="btn_add_more_food">Add</string>
    <string name="tv_total_label">Total:</string>
    <string name="tv_total_price">400000</string>
    <string name="tv_total_currency">VND</string>
    <string name="tv_default_total">0</string>
    <string name="btn_log_out">Logout</string>
    <string name="btn_cancel_detail">Back</string>
</resources>
