<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTransparentGreen"
    tools:context=".ui.activity.EditFoodActivity">

    <TextView
        android:id="@+id/tv_edit_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_food_name"
        style="@style/AddEmployeeTextView"/>


    <LinearLayout
        android:id="@+id/ll_edit_food_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_edit_food_name"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/AddEmployeeTextView"
            android:text="@string/tv_edit_food_sample_quantity"/>

        <EditText
            android:id="@+id/et_add_food_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tv_food_order_quantity"
            android:inputType="number"
            style="@style/AddEmployeeEditText"/>

        <Button
            android:id="@+id/btn_add_more_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_add_more_food"/>

    </LinearLayout>


    <EditText
        android:id="@+id/et_add_food_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_edit_food_quantity"
        android:hint="@string/tv_add_food_price"
        android:inputType="numberDecimal"
        style="@style/AddEmployeeEditText"/>

    <EditText
        android:id="@+id/et_add_food_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_add_food_price"
        android:hint="@string/tv_add_food_description"
        android:inputType="text"
        style="@style/AddEmployeeEditText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_add_food_description"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_add_new_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_edit_food_confirm"
            style="@style/AddEmployeeActivity"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            style="@style/AddEmployeeActivity"/>

    </LinearLayout>

</RelativeLayout>