<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.TableDetailActivity">

    <TextView
        android:id="@+id/tv_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_table_detail_cus_id_base"
        style="@style/TableDetailTextView"/>

    <!--Format của TV Customer: ID: xxx - Name: xxx-->

    <include
        layout="@layout/item_food_order"
        android:id="@+id/item_food_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_customer"/>

    <ListView
        android:id="@+id/lv_food_by_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_total"
        android:layout_below="@id/item_food_order"/>

    <LinearLayout
        android:id="@+id/ll_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_cancel"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/tv_total_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/tv_total_label"
            style="@style/TableDetailTextView"/>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/tv_total_price"
            android:textColor="@color/colorRed"
            style="@style/TableDetailTextView"/>

        <TextView
            android:id="@+id/tv_total_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/tv_total_currency"
            style="@style/TableDetailTextView"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/btn_checkout"
        style="@style/TableDetailButtonCancel"/>

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TableDetailButtonCheckout"/>

</RelativeLayout>