<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65"/>

    <TextView
        android:id="@+id/tv_food_id"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ItemNo"/>

    <TextView
        android:id="@+id/tv_food_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/tv_food_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ItemName"/>

    <TextView
        android:id="@+id/iv_food_quantity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/tv_food_order_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_3"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ItemQuantity"/>

    <TextView
        android:id="@+id/tv_food_price"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_3"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tv_food_order_price"
        style="@style/ItemQuantity"/>

</android.support.constraint.ConstraintLayout>