<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context="ui.activity.LoginActivity">

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:src="@drawable/logo_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/tv_sign_in"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_3"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/loginEditText"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:hint="@string/et_hint_account_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/loginEditText"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_4"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/loginButton"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_5" />

</android.support.constraint.ConstraintLayout>
